--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h3><a href="">Dolar</a></h3>
       <h3><a href="">Impactante</a></h3>
       <h3><a href="">Terremoto</a></h3>
-      <h3><a href="">NAFTA</a></h3>
+      <h3><a href="">NAFTA-</a></h3>
     </ul>
   </nav>
 
@@ -46,7 +46,7 @@
 
   <footer>
     <h4>Redes Sociales</h4>
-    <h4><a href="https://www.facebook.com" target="_blank"> <img class="Social" src="Imagenes/Facebook.png" alt="Facebook"></a> <a href="https://twitter.com" target="_blank"><img class="Social" src="Imagenes/Twitter.png"></a></h4>
+    <h4><a href="https://www.facebook.com" target="_blank"> <img class="Social" src="Imagenes/Facebook.png" alt="Facebook"></a> <a href="https://twitter.com" target="_blank"><img class="Social" src="Imagenes/Twitter.png"></a><a href="https://www.instagram.com/"> <img src="Imagenes/Insta.png" alt="Instagram></a></h4>
   </footer>
 
 </body>
